--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i);
-@import url(https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i);
 
 
 
@@ -21,39 +20,39 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Merriweather', serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 3rem;
 }
 .display-1 > .mbr-iconfont {
   font-size: 4.8rem;
 }
 .display-2 {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 3rem;
 }
 .display-2 > .mbr-iconfont {
   font-size: 4.8rem;
 }
 .display-4 {
-  font-family: 'Nunito', sans-serif;
-  font-size: 1rem;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1.1rem;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.76rem;
 }
 .display-5 {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 1.5rem;
 }
 .display-5 > .mbr-iconfont {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Nunito', sans-serif;
-  font-size: 1rem;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1.2rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.92rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -72,9 +71,9 @@ body {
     line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.8rem;
-    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.88rem;
+    font-size: calc( 1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
     font-size: 1.2rem;
@@ -654,14 +653,14 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Nunito', sans-serif;
-  font-size: 1rem;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1.2rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.92rem;
 }
 .form-control,
 .form-control:focus {
@@ -1755,11 +1754,11 @@ body {
   color: #eb0000 !important;
 }
 .cid-qTkA127IK8 {
-  background-image: url("../../../assets/images/hero-image-2000x775.jpg");
+  background-image: url("../../../assets/images/bokaap-hero-2000x1072.jpg");
 }
 .cid-qTkA127IK8 .mbr-text,
 .cid-qTkA127IK8 .mbr-section-btn {
-  color: #7a6f6f;
+  color: #ffffff;
   text-align: left;
 }
 .cid-qTkA127IK8 SPAN {
@@ -1769,10 +1768,390 @@ body {
   text-align: left;
   color: #232323;
 }
+.cid-qTkA127IK8 I {
+  color: #ffffff;
+}
+.cid-r2dW9HEt2U {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-r2dW9HEt2U h2 {
+  text-align: left;
+}
+.cid-r2dW9HEt2U h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-r2dW9HEt2U p {
+  color: #767676;
+  text-align: left;
+}
+.cid-r2dW9HEt2U .aside-content {
+  flex-basis: 100%;
+}
+.cid-r2dW9HEt2U .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-r2dW9HEt2U .media {
+  margin: initial;
+  align-items: center;
+}
+.cid-r2dW9HEt2U .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-r2dW9HEt2U .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-r2dW9HEt2U .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-r2dW9HEt2U .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-r2dW9HEt2U .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-r2dW9HEt2U .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-r2e3QsfyER {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r2e3QsfyER .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r2e3QsfyER H2 {
+  text-align: left;
+}
+.cid-r2dZNJJefb {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-r2dZNJJefb .counter-container {
+  color: #767676;
+}
+.cid-r2dZNJJefb .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-r2dZNJJefb .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-r2dZNJJefb .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-r2dZNJJefb .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #eb0000;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border-radius: 0;
+}
+.cid-r2dZNJJefb .mbr-text B {
+  color: #232323;
+}
+.cid-r2dVU1hzkS {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: #ffffff;
+}
+.cid-r2dVU1hzkS .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r2dVU1hzkS .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r2dVU1hzkS .media-container-row .img-item .img-cont {
+  position: relative;
+  overflow: hidden;
+}
+.cid-r2dVU1hzkS .media-container-row .img-item .img-cont img {
+  width: 100%;
+}
+.cid-r2dVU1hzkS .media-container-row .img-item .img-cont .img-caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r2dVU1hzkS .media-container-row .img-item .img-cont .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r2dVU1hzkS .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r2dVU1hzkS .img-item {
+    width: 100% !important;
+  }
+  .cid-r2dVU1hzkS .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-r2eJ99cWXo {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r2eJ99cWXo .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r2eJ99cWXo .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r2eJ99cWXo .media-container-row .img-item .img-cont {
+  position: relative;
+  overflow: hidden;
+}
+.cid-r2eJ99cWXo .media-container-row .img-item .img-cont img {
+  width: 100%;
+}
+.cid-r2eJ99cWXo .media-container-row .img-item .img-cont .img-caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r2eJ99cWXo .media-container-row .img-item .img-cont .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r2eJ99cWXo .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r2eJ99cWXo .img-item {
+    width: 100% !important;
+  }
+  .cid-r2eJ99cWXo .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-r2eJbg3OwU {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: #ffffff;
+}
+.cid-r2eJbg3OwU .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r2eJbg3OwU .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r2eJbg3OwU .media-container-row .img-item .img-cont {
+  position: relative;
+  overflow: hidden;
+}
+.cid-r2eJbg3OwU .media-container-row .img-item .img-cont img {
+  width: 100%;
+}
+.cid-r2eJbg3OwU .media-container-row .img-item .img-cont .img-caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r2eJbg3OwU .media-container-row .img-item .img-cont .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r2eJbg3OwU .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r2eJbg3OwU .img-item {
+    width: 100% !important;
+  }
+  .cid-r2eJbg3OwU .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-r2eJcVL0Iz {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: #ffffff;
+}
+.cid-r2eJcVL0Iz .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r2eJcVL0Iz .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r2eJcVL0Iz .media-container-row .img-item .img-cont {
+  position: relative;
+  overflow: hidden;
+}
+.cid-r2eJcVL0Iz .media-container-row .img-item .img-cont img {
+  width: 100%;
+}
+.cid-r2eJcVL0Iz .media-container-row .img-item .img-cont .img-caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r2eJcVL0Iz .media-container-row .img-item .img-cont .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r2eJcVL0Iz .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r2eJcVL0Iz .img-item {
+    width: 100% !important;
+  }
+  .cid-r2eJcVL0Iz .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-r2eJeMlXUn {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r2eJeMlXUn .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r2eJeMlXUn .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r2eJeMlXUn .media-container-row .img-item .img-cont {
+  position: relative;
+  overflow: hidden;
+}
+.cid-r2eJeMlXUn .media-container-row .img-item .img-cont img {
+  width: 100%;
+}
+.cid-r2eJeMlXUn .media-container-row .img-item .img-cont .img-caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r2eJeMlXUn .media-container-row .img-item .img-cont .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r2eJeMlXUn .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r2eJeMlXUn .img-item {
+    width: 100% !important;
+  }
+  .cid-r2eJeMlXUn .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-r2e5SbiH5V {
+  background: #ffffff;
+}
+.cid-r2e5SbiH5V .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-r2e5SbiH5V .mbr-figure {
+  margin: 0 auto;
+}
+.cid-r2e5SbiH5V figcaption {
+  position: relative;
+}
+.cid-r2e5SbiH5V figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-r2e5SbiH5V .image-block {
+    width: 100% !important;
+  }
+}
+.cid-r2e5SbiH5V DIV {
+  text-align: center;
+}
 .cid-qVfCqSduwN {
   padding-top: 120px;
   padding-bottom: 120px;
-  background-image: url("../../../assets/images/hand-girl-full-2000x1291.jpg");
+  background-image: url("../../../assets/images/hands-hero-1190x774.jpg");
 }
 @media (min-width: 992px) {
   .cid-qVfCqSduwN .mbr-figure {
@@ -1791,82 +2170,11 @@ body {
 }
 .cid-qVfCqSduwN .mbr-text,
 .cid-qVfCqSduwN .mbr-section-btn {
-  color: #f4bdbd;
+  color: #ffffff;
+  text-align: left;
 }
 .cid-qVfCqSduwN H1 {
   color: #ffffff;
-}
-.cid-qVfewD8Qey {
-  padding-top: 120px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-qVfewD8Qey .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-qVeUSBEBEX {
-  padding-top: 0px;
-  padding-bottom: 75px;
-  background-color: #ffffff;
-}
-.cid-qVeUSBEBEX .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-qVeUSBEBEX .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-qVeUSBEBEX .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qVeUSBEBEX .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-qVeUSBEBEX .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #ffffff;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-qVeUSBEBEX .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-qVeUSBEBEX .mbr-gallery-item > div:hover:before {
-  opacity: 0.2 !important;
-}
-.cid-qVeUSBEBEX .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-qVeUSBEBEX .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #ffffff !important;
-  opacity: 0.2;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-}
-.cid-qVeUSBEBEX .mbr-gallery-item > div > span {
-  color: #232323;
-  text-align: left;
 }
 .cid-qVfQOpRmXu {
   padding-top: 0px;
@@ -1876,13 +2184,18 @@ body {
 .cid-qVfQOpRmXu .testimonial-text {
   font-style: italic;
   font-weight: 300;
+  text-align: center;
 }
 .cid-qVfQOpRmXu .mbr-author-name {
   font-weight: bold;
+  text-align: center;
 }
 .cid-qVfQOpRmXu .media-container-row {
   word-wrap: break-word;
   word-break: break-word;
+}
+.cid-qVfQOpRmXu .mbr-author-desc {
+  text-align: center;
 }
 .cid-qVfL4z882b {
   padding-top: 45px;
@@ -1935,9 +2248,9 @@ body {
   text-align: left;
 }
 .cid-qVfWTjttnO {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/we-2000x1500.jpg");
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/5708197308-df469d450f-o-900x600.jpg");
 }
 .cid-qVfWTjttnO H1 {
   color: #b2ccd2;
@@ -1955,15 +2268,64 @@ body {
 .cid-qVfWTjttnO H3 {
   color: #232323;
 }
-.cid-qVfWbalEzi {
+.cid-qVfWTjttnO I {
+  color: #ffffff;
+}
+.cid-r2eMmzJL9U {
   padding-top: 90px;
+  padding-bottom: 90px;
+  background: #ffffff;
+}
+.cid-r2eMmzJL9U .images-container.container-fluid {
+  padding: 0;
+}
+.cid-r2eMmzJL9U .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r2eMmzJL9U .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r2eMmzJL9U .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-r2eMmzJL9U .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r2eMmzJL9U .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r2eMmzJL9U .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r2eMmzJL9U .img-item {
+    width: 100% !important;
+  }
+  .cid-r2eMmzJL9U .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-qVfWbalEzi {
+  padding-top: 30px;
   padding-bottom: 15px;
-  background-color: #232323;
+  background-color: #181819;
 }
 .cid-qVfv9LIHWw {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #232323;
+  background-image: url("../../../assets/images/img-9954-2000x1333.jpg");
 }
 @media (max-width: 767px) {
   .cid-qVfv9LIHWw .content {
